Changes made from the "0.3" release to the "0.4" release:
-----------------------------------------------------------

- Uses GNU extensions of gcc where possible to implement the constructor and the
  destructor of the library (instead of _init and _fini)
- Fixed the crashes due to the removal of the combine callback of the GLU
  tesselator. The callback is now restored and compatible with the arrays of
  variable size (__glcArray)
- Quesoglc now uses autotools to build
- Thomas Zimmermann fixed the string measurement commands that did not return
  results that were consistent with those returned by glcCharMetric().
- Fixed a bug in glcDeleteFont() where the face was not closed before the font
  was deleted.
- Display lists are now managed at the charmap level instead of being handled by
  the masters. This allows a better management and optimizes the GPU memory
  management by deleting display lists and textures as soon as the corresponding
  glyph is removed.
- Charmaps now use binary search instead of linear search
- Texture mipmap levels in GLC_TEXTURE style are now built directly by QuesoGLC
  instead of using GLU. It should provide better rendering quality at small
  pixel sizes
- The z coordinate of bounding boxes is now also used to determine if a Bezier
  curve lies outside the viewport
- Calculations now use GLfloat instead of GLdouble
- Removed the useless third coordinate of the vertex array used for GLC_LINE
  and GLC_TRIANGLE styles
- Fixed a bug where the advance of a glyph that is skipped because it lies
  outside the viewport were not taken into account
- Unified the behaviour of the rendering and measuring routines so that the
  later now take into account the state of GLC_HINTING_QSO.
- Removed the file 'constant.h'
- Added the enumerant GLC_HINTING_QSO to the glEnable()/glDisable() functions
  to allow the user to activate hinting when glyphs are rendered at small pixel