@@ -913,10 +913,7 @@ GLint glcGeti(GLCenum inAttrib)
   case GLC_RENDER_STYLE:
     return state->renderStyle;
   case GLC_REPLACEMENT_CODE:
-    /* Return the replacement character converted to the current string type.
-     * See comments at the definition of __glcConvertUcs4ToGLint() for known
-     * limitations
-     */
+    /* Return the replacement character converted to the current string type */
     return __glcConvertUcs4ToGLint(state, state->replacementCode);
   case GLC_STRING_TYPE:
     return state->stringType;
