@@ -531,10 +531,7 @@ void glcRenderChar(GLint inCode)
     return;
   }
 
-  /* Get the character code converted to the UCS-4 format.
-   * See comments at the definition of __glcConvertGLintToUcs4() for known
-   * limitations
-   */
+  /* Get the character code converted to the UCS-4 format */
   code = __glcConvertGLintToUcs4(state, inCode);
   if (code < 0)
     return;
@@ -734,10 +731,7 @@ void glcReplacementCode(GLint inCode)
     return;
   }
 
-  /* Get the replacement character converted to the UCS-4 format.
-   * See comments at the definition of __glcConvertGLintToUcs4() for known
-   * limitations
-   */
+  /* Get the replacement character converted to the UCS-4 format */
   code = __glcConvertGLintToUcs4(state, inCode);
   if (code < 0)
     return;
